dataset/1.code_smell_tf_file/unrestricted_ip_address/t_sample52.tf
resource "aws_network_acl" "fish_nacl" {
  vpc_id = aws_vpc.fish.id
  subnet_ids = [
    aws_subnet.fish_public_subnet.id
  ]
  ingress {
    protocol   = "-1"
    rule_no    = 1000
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }
  egress {
    protocol   = "-1"
    rule_no    = 1000
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }
  tags = {
    Name =  format("%s-general", var.fish)
  }
}
